[package]
name = "bloom"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
num-format = "0.4.4"
poise = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
ureq = { version = "3.0.12", features = ["json"] }
